--- a/production.ini
+++ b/production.ini
@@ -14,6 +14,9 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
+jinja2.filters =
+    markdown = learning_journal.views.render_markdown
+
 sqlalchemy.url = sqlite:///%(here)s/learning_journal.sqlite
 
 [server:main]
